# banshee-rust

./: Cargo.toml  README.md
common/src/: gateways.rs  lib.rs
common_gateways_and_adapters/: Cargo.toml
common_gateways_and_adapters/src/: lib.rs
glfw_window_adapter/: Cargo.toml
glfw_window_adapter/src/: adapter.rs  lib.rs  primary_adapter.rs
image_crate_image_loader_adapter/: Cargo.toml
image_crate_image_loader_adapter/src/: lib.rs
test_target_desktop/: Cargo.toml
test_target_desktop/src/: instanced_cube.rs  instanced_cube_dynamic_update.rs  main.rs  simple_cube.rs  test_glfw_adapter.rs  utils.rs
wgpu_graphical_adapter/: Cargo.toml
wgpu_graphical_adapter/src/: camera.rs  gateways.rs  instance.rs  lib.rs  model.rs  pipeline.rs  state.rs  texture.rs  vertex.rs
wgpu_graphical_adapter/src/default_pipeline_impl/: default_pipeline.rs  default_pipeline_draw_model_impl.rs  mod.rs  shader.wgsl  texture.rs  vertex.rs
wgpu_obj_model_loader_adapter/: .gitignore  Cargo.toml
wgpu_obj_model_loader_adapter/src/: lib.rs
